adding search bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,10 @@ background-image: url('https://www.transparenttextures.com/patterns/brick-wall-d
       </div>
     </nav>
   </div>
+  <form class="example" action="/search">
+    <input type="text" placeholder="Search.." name="search">
+    <button type="submit"><i class="fa fa-search">seacrh</i></button>
+  </form>
 
     <div class="container">
       {% block content %}
